--- a/slides/src/main/asciidoc/theme.css
+++ b/slides/src/main/asciidoc/theme.css
@@ -212,6 +212,7 @@ body {
 .reveal pre code {
   /* display: block;*/
   font-size: 2.1em;
+  font-weight: bold;
   padding: 5px;
   overflow: auto;
   max-height: 400px;
